--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
     "@huggingface/inference": "^4.13.0",
     "@langchain/community": "^1.0.0",
     "@langchain/core": "^1.0.2",
@@ -18,11 +19,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.0",
-    "chromadb": "^3.1.0",
+    "chromadb": "^3.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "faiss-node": "^0.5.1",
-    "langchain": "^1.0.2",
+    "langchain": "^1.0.3",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
     "react": "19.1.0",
