a few final updations

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@langchain/core": "^1.0.2",
     "@langchain/google-genai": "^1.0.0",
     "@langchain/langgraph": "^1.0.1",
+    "@langchain/qdrant": "^1.0.0",
     "@langchain/textsplitters": "^1.0.0",
+    "@qdrant/js-client-rest": "^1.15.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.0",
