--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "faiss-node": "^0.5.1",
+    "gsap": "^3.13.0",
     "langchain": "^1.0.3",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
     "react": "19.1.0",
+    "react-bits": "^1.0.5",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.0",
     "tiktoken": "^1.0.22",
     "uuid": "^13.0.0",
     "youtube-caption-extractor": "^1.9.1",
@@ -44,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.181.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
